package at.kalwoda.nocodeapi.domain;

public enum FieldType {
    STRING,
    INTEGER,
    BOOLEAN,
    FLOAT,
    DATE
}
