package at.kalwoda.nocodeapi.domain;

public enum UserRole {
    USER,
    ADMIN
}
