@startuml
'https://plantuml.com/class-diagram
' Layout
left to right direction
skinparam classAttributeIconSize 0

' ==== User Domain ====
class User <Entity> << (E, #9b59b6) >> {
+apiKey: ApiKey
+username: String
+email: Email
+password: String
+role: UserRole
+createdAt: Date
+lastLogin: Date
+isActive: Boolean
+isEmailVerified: Boolean
+sessionToken: String
}

class Email <RichType> <<(R, #3498eb) embedded >> {
- value: String
}

class Username <RichType> <<(R, #3498eb) embedded >> {
- value: String
}

enum UserRole <Enum> << (E, #2ecc71) embedded >> {
ADMIN
USER
}

class ApiKey <ValueObject> <<(V, #e67e22) embedded >> {
- value: String
}

User --> Email : < embedded
User --> UserRole : < embedded
User --> ApiKey : < embedded
User --> Username : < embedded
User --> Password : < embedded

' ==== Project Domain ====
class GeneratedApiProject <Entity> << (E, #9b59b6) >> {
+apiKey: ApiKey
+modelName: String
+description: String
+promptText: String
+zipPath: String
+createdAt: Date
}

User "1" -- "n" GeneratedApiProject : besitzt >
GeneratedApiProject --> ApiKey : < embedded

' ==== EntityModel Domain ====
class Entity <Entity> << (E, #9b59b6) >> {
+apiKey: ApiKey
+name: String
}

GeneratedApiProject "1" -- "n" Entity : enthält >
Entity "1" -- "n" Field : enthält >
Entity --> ApiKey : < embedded


' ==== Field Domain ====
class Field <Entity > << (E, #9b59b6) >> {
+apiKey: ApiKey
+fieldName: String
+fieldType: FieldType
+isRequired: Boolean
}

enum FieldType <Enum> << (E, #2ecc71) embedded >> {
STRING
INTEGER
BOOLEAN
FLOAT
DATE
}

Field --> FieldType : < embedded
Field --> ApiKey : < embedded

' ==== Token Domain ====
class ApiAccessToken <Entity> << (E, #9b59b6) >> {
+apiKey: ApiKey
+createdAt: Date
+expiresAt: Date
+project: GeneratedApiProject
}

GeneratedApiProject "1" -- "1..*" ApiAccessToken : generiert >
ApiAccessToken --> ApiKey : < embedded

@enduml